# rupa

./: .gitignore  Cargo.toml  DESIGN.drawio  LICENSE  README.md  RUPA.drawio  TODO.md  index.html
src/: app.rs  cli.rs  errors.rs  lib.rs  main.rs
src/api/: greet.rs  mod.rs
src/api/session/: delete.rs  new.rs
src/components/: error.rs  errors.rs  mod.rs  navigation.rs
src/components/dashboard/: interface.rs  mod.rs  resume.rs  table_groups_user.rs  traffics.rs
src/modules/: ADAPTERS.md  database.rs  mod.rs
src/pages/: dashboard.rs  login.rs  mod.rs
src/repositories/: database.rs  entities.rs  mod.rs
style/: main.scss
